<resources>
    <!-- general strings -->
    <string name="app_name">SolaDroid</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="retrofit_error_title">Network Request Error</string>
    <string name="retrofit_error_message">We cannot load your Trello data at this time. Please try again later. Your progress could not be saved.</string>
    <string name="network_off_title">WiFi OFF</string>
    <string name="network_off_message">Your WiFi or Data seems to be disabled. We do not support offline mode in this version. Please enable your Internet access, otherwise you may experience data loss.</string>

    <!-- strings for the Trello setup functionality -->
    <string name="trello_access_denied">You have chosen not to allow SolaDroid to access your Trello account.\nIf you changed your mind, please press the "OK" button, otherwise the Android back button will exist the application.</string>
    <string name="trello_setup_boards_section_label">Your Boards</string>
    <string name="trello_setup_todo_section_label">Pick To Do List</string>
    <string name="trello_setup_doing_section_label">Pick Doing List</string>
    <string name="trello_setup_done_section_label">Pick Done List</string>
    <string name="trello_setup_all_done_button">All Done</string>

    <!-- strings for the task status functionality -->
    <string name="task_status_activity_title">Task Status</string>
    <string name="task_status_todo">To Do</string>
    <string name="task_status_doing">Doing</string>
    <string name="task_status_done">Done</string>
    <string name="task_status_action_previous">previous</string>
    <string name="task_status_action_next">next</string>

    <!-- strings for the Pomodoro timer functionality -->
    <string name="timer_pomodoro_counter">Pomodoros: %1$s</string>
    <string name="timer_pomodoro_timer">25:00</string>
    <string name="timer_pomodoro_total">Total: %1$s</string>
    <string name="timer_pomodoro_pause">Pause</string>
    <string name="timer_pomodoro_resume">Resume</string>
    <string name="timer_pomodoro_start">Start</string>
    <string name="timer_pomodoro_stop">Stop</string>
    <string name="timer_pomodoro_done">Done</string>
    <string name="timer_pomodoro_back">Back</string>
    <string name="timer_pomodoro_five">Take Five</string>
    <string name="timer_pomodoro_fifteen">Take Fifteen</string>
</resources>
