<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                tools:context="com.androidsensei.soladroid.setup.ui.TrelloSetupFragment">

    <LinearLayout
        android:id="@+id/trello_setup_boards_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trello_setup_boards_section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trello_setup_boards_section_label"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/trello_setup_boards_section_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trello_setup_todo_section"
        android:layout_below="@id/trello_setup_boards_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trello_setup_todo_section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trello_setup_todo_section_label"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/trello_setup_todo_section_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trello_setup_doing_section"
        android:layout_below="@id/trello_setup_todo_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trello_setup_doing_section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trello_setup_doing_section_label"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/trello_setup_doing_section_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/trello_setup_done_section"
        android:layout_below="@id/trello_setup_doing_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trello_setup_done_section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trello_setup_done_section_label"
            android:textSize="20sp"/>

        <Spinner
            android:id="@+id/trello_setup_done_section_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            />
    </LinearLayout>

    <Button
        android:id="@+id/trello_setup_all_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trello_setup_done_section"
        android:layout_marginTop="24dp"
        android:text="@string/trello_setup_all_done_button"/>

</RelativeLayout>
